Fixed policies section mobile layout

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ button {
     border-radius: 5.25px;
     font-size: 1.6rem;
     padding: 8px 17px;
-    
+    text-transform: uppercase;
 }
 
 img {
@@ -237,6 +237,7 @@ nav box-icon {
 /* || Card Section */
 .policies {
     padding: 15rem 13vw;
+    position: relative;
 }
 
 .policies h2 {
@@ -252,7 +253,7 @@ nav box-icon {
 
 .policy {
     flex-basis: 30%;
-    padding-top: 4.2rem;
+    margin-top: 4.2rem;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -261,6 +262,7 @@ nav box-icon {
 .policy h3 {
     font-size: 2.4rem;
     padding: 0 3rem;
+    flex-shrink: 1;
 }
 
 .policy p {
@@ -269,4 +271,47 @@ nav box-icon {
     color: #4F4F4F;
     padding: 0 3rem;
     opacity: 0.6;
+    flex-shrink: 1;
+}
+
+.policies hr {
+    margin: 1rem 0;
+    border: 3px solid #BECEC7;
+    border-radius: 5px;
+    width: 65px;
+}
+
+.policies button {
+    font-size: 1.5rem;
+    padding: 1.6rem 4rem;
+    font-weight: 500;
+    color: #2B2B31;
+    position: absolute;
+    left: 40vw;
+    margin-top: 4.2rem;
+}
+
+@media only screen and (max-width: 768px) {
+    .row {
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: center;
+    }
+
+    .policy img {
+        height: 45vw;
+    }
+
+    .policy h3 {
+        font-size: 3rem;
+    }
+
+    .policy p {
+        font-size: 2rem;
+    }
+
+    .policies button {
+        left: 30vw;
+    }
+    
 }
